# long-predict

./: .gitignore  CMakeLists.txt  README.md
models/: both.model  both.model.conf  hg19.firstorf.quadratic.model  hg19.firstorf.quadratic.model.conf  hg19.firstorf.radial.model  hg19.firstorf.radial.model.conf  hg19.longestorf.quadratic.model  hg19.longestorf.quadratic.model.conf  hg19.longestorf.radial.model  hg19.longestorf.radial.model.conf  hg19_mm10.firstorf.radial.model  hg19_mm10.firstorf.radial.model.conf  hg19_mm10.longestorf.radial.model  hg19_mm10.longestorf.radial.model.conf  hg38.firstorf.quadratic.model  hg38.firstorf.quadratic.model.conf  hg38.firstorf.radial.model  hg38.firstorf.radial.model.conf  hg38.longestorf.quadratic.model  hg38.longestorf.quadratic.model.conf  hg38.longestorf.radial.model  hg38.longestorf.radial.model.conf  hg38_mm10.firstorf.radial.model  hg38_mm10.firstorf.radial.model.conf  hg38_mm10.longestorf.radial.model  hg38_mm10.longestorf.radial.model.conf  human.model  human.model.conf  mm10.firstorf.radial.model  mm10.firstorf.radial.model.conf  mm10.longestorf.radial.model  mm10.longestorf.radial.model.conf  mm10_z10.firstorf.radial.model  mm10_z10.firstorf.radial.model.conf  mm10_z10.longestorf.radial.model  mm10_z10.longestorf.radial.model.conf  mouse.model  mouse.model.conf
src/: configFileParser.c  configFileParser.h  kseq.h  main.c  suffixArray.c  suffixArray.h
